k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-example
  name: dotnet-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-example
  template:
    metadata:
      labels:
        app: dotnet-example
    spec:
      containers:
      - image: efranca/dotnet-example:latest
        name: dotnet-example
