k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-example
spec:
  type: ClusterIP
  selector:
    app: dotnet-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
