k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dotnet-example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-example
            port:
              number: 80 #service port
